<resources>
    <string name="app_name">frontend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">De Unges Liv på Nettet</string>
    <string name="nav_header_subtitle">Kontakt: ####@####.###</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>

    <string name="home_title">Jeg har ret til privatliv</string>
    <string name="home_desc">No Text. </string>



    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">logout</string>
    <string name="login_with_google">login with gmail</string>
    <string name="google_sign_in_failed">Failed to sign in</string>
    <string name="home_info_title">Hvorfor gør vi dette her?</string>
    <string name="home_info_desc">- Sikre Børn og unges sikkerhed online.\n
                                - Give børn og unge en platform, hvor de kan italesætte hvad de oplever online.\n
                                - Give forældrer mulighed for at spare med andrer forældrer omkring deres erfaringer.\n
                                - Anonymitet til en vis grænse (se brugerpolikiken).\n
                                - En platform der belyser muligheder og risiciene online.
                            </string>
</resources>